単体テストコード修正

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,7 +9,7 @@ ja:
         first_name_kana: 名前(カナ)
         birth_date: 生年月日
       item:
-        image: 画像
+        images: 画像
         name: 商品名
         info: 商品の説明
         category_id: カテゴリー
